--- a/docs/styles.css
+++ b/docs/styles.css
@@ -432,6 +432,33 @@ footer a {
     font-size: 0.8rem;
 }
 
+.footer-logo-container {
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-logo {
+    width: 120px;
+    height: 30px;
+    background-color: var(--accent-color);
+    -webkit-mask-image: url('logo.svg');
+    mask-image: url('logo.svg');
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: contain;
+    mask-size: contain;
+    -webkit-mask-position: center;
+    mask-position: center;
+    opacity: 0.7;
+    transition: opacity 0.3s, transform 0.3s;
+}
+
+.footer-logo:hover {
+    opacity: 1;
+    transform: scale(1.05);
+}
+
 /* Scrollbar */
 ::-webkit-scrollbar {
     width: 10px;
